# vs-api

./: .gitignore  README.md  environment.yml  manage.sh  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
src/: main.py
src/vs_api/: __init__.py
src/vs_api/ovsx/: __init__.py  ovsx.py
src/vs_api/ovsx/api/: __init__.py  info.py  namespace.py  publisher.py  reviews.py  search.py
src/vs_api/ovsx/errors/: ExtensionNotFound.py  PublisherNotFound.py  __init__.py  extension_not_found.py
src/vs_api/ovsx/models/: __init__.py  info.py  namespace.py  publisher.py  reviews.py  search.py
src/vs_api/ovsx/types/: __init__.py  _types.py
tests/: .gitkeep
